# unified-mcp-system-v3

./: .gitmodules  .ruff.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  model_context.db  mypy.ini  prometheus.yml  pyproject.toml  pytest.ini  requirements-optional.txt  sitecustomize.py
.git_disabled/: index
.git_disabled/info/: refs
.github/workflows/: ci.yml  plogic-smoke.yml
config/: tools.dev.yaml  tools.yaml
docs/: INTEGRATION.md
examples/: basic_usage.py
lc_mcp_app/: __init__.py  cli.py  config.py  create_github_repo.ps1  docker-compose.override.yml  openai_models.py  plogic_all.patch  server.py  setup_github_repos.ps1
lc_mcp_app/config/: tools.yaml
lc_mcp_app/middleware/: auth.py  (+1 more)
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  RTSC_CoverPage.tex  RTSC_Traveler.tex  pyproject.toml  requirements.txt  run_tests.py  test_ci_fixes.py  test_output.txt
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/.git_disabled/: COMMIT_EDITMSG  HEAD  ORIG_HEAD  config  index
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/.git_disabled/logs/: HEAD
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/.git_disabled/logs/refs/heads/: main
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/.git_disabled/logs/refs/heads/fix/: readme-final-fixes  readme-structure-ci
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/.git_disabled/logs/refs/heads/hotfix/: readme-links-v2
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/.git_disabled/logs/refs/remotes/origin/: HEAD  main  master
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/.git_disabled/logs/refs/remotes/origin/fix/: readme-structure-ci
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/.git_disabled/refs/heads/fix/: readme-final-fixes  readme-structure-ci
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/.git_disabled/refs/remotes/origin/: main  master
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/.git_disabled/refs/remotes/origin/fix/: readme-structure-ci
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/.git_disabled/refs/tags/: v0.1.0  v1.0.0  v1.0.1  v1.0.2
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md  experimental_results.md
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/.github/workflows/: ci.yml
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/docs/: Fabrication_SOP.md  RTSC_Claim_Card.md  RTSC_MiniDeck.tex  Safety_Protocols.md  Student_Guide.md  Theory_Background.md  data_format.md  rtsc_results.schema.json
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/examples/demo_run/: rtsc_results.sample.json
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/examples/sample_data/: ac_susceptibility.csv  iv_4probe.csv  raman.csv  synthetic_alpha2f.csv
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/examples/validation_runs/: tc_local_sensitivity.csv
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/examples/validation_runs/synthetic_run/: result.json
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/quantum_rtsc_protocol/: __init__.py  cli.py
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/quantum_rtsc_protocol/analysis/: __init__.py  allen_dynes_demo.ipynb  results_schema.json  sensitivity.py  supercon_analysis.py  validators.py
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/quantum_rtsc_protocol/masks/: __init__.py  demo.gds  mask_generator.py
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/quantum_rtsc_protocol/tools/: __init__.py  eliashberg_runner.py  mask_generator.py  quickstart.py  rtsc_calculator.py  rtsc_pipeline.py  units.py
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/schemas/: ad-screen-1.schema.json
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/tests/: conftest.py  test_calculations.py  test_calculator.py  test_cli.py  test_cli_calc.py  test_eliashberg_runner.py  test_enhanced_calculator.py  test_legacy_path.py  test_regression.py  test_results_schema.py  test_validators.py
lc_mcp_app/quantum-rtsc-protocol.bak_20250822_2228/tools/: eliashberg_runner.py
lc_mcp_app/unified-mcp-system-v3/: .pre-commit-config.yaml  Makefile  README.md  deploy_clean.ps1  pyproject.toml  repo_data.json  v3_repo.json
lc_mcp_app/unified-mcp-system-v3/.git_disabled/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  packed-refs
lc_mcp_app/unified-mcp-system-v3/.git_disabled/objects/info/: commit-graph
lc_mcp_app/unified-mcp-system-v3/.git_disabled/objects/pack/: pack-078420e02466d66baed2e8a010d66007fb647622.pack  pack-078420e02466d66baed2e8a010d66007fb647622.rev  pack-5121df26d343d241a602dfcf1925ca7045877766.idx  pack-5121df26d343d241a602dfcf1925ca7045877766.pack  pack-5121df26d343d241a602dfcf1925ca7045877766.rev
lc_mcp_app/unified-mcp-system-v3/.github/workflows/: ci.yml
lc_mcp_app/unified-mcp-system-v3/lc_mcp_app/: config.py
lc_mcp_app/unified-mcp-system-v3/lc_mcp_app/clients/: mcp_client.py
lc_mcp_app/unified-mcp-system-v3/lc_mcp_app/middleware/: __init__.py  auth.py  metrics.py
lc_mcp_app/unified-mcp-system-v3/lc_mcp_app/tools/: base.py  registry.py  superconductivity_calculator.py
lc_mcp_app/unified-mcp-system-v3/mcp_agent/: config.py
lc_mcp_app/unified-mcp-system-v3/mcp_agent/database/: models.py
lc_mcp_app/unified-mcp-system-v3/mcp_agent/observability/: metrics.py
lc_mcp_app/unified-mcp-system-v3/mcp_agent/security/: auth.py  rate_limiting.py  sandbox.py
lc_mcp_app/unified-mcp-system-v3/tests/: test_health.py  test_openai_api.py
lc_mcp_app/unified-mcp-system-v3/tests/mcp_contract/: test_spec.py
lc_mcp_app/unified-mcp-system-v3/tests/mcp_server/: test_server.py
mcp_agent/: __init__.py  cli.py  config.py  server.py
tests/: conftest.py  test_langchain_mcp_adapter.py  test_mcp_conformance.py  test_mcp_contract.py
(+66 files in other folders)
